Added implementation for the different classes

--- a/SimpeCoffeeMachine/Properties/launchSettings.json
+++ b/SimpeCoffeeMachine/Properties/launchSettings.json
@@ -20,7 +20,7 @@
     "SimpeCoffeeMachine": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "weatherforecast",
+      "launchUrl": "coffee/prepare",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
